# model_registry

./: README.md  app.py  config.py  docker-compose.yml  dockerfile  pyproject.toml
datasources/: db.py  minio.py
handlers/: model.py
models/: model.py
routers/: model.py
