[tool.poetry]
name = "model-registry"
version = "0.1.0"
description = ""
authors = ["suwan.jang <jsuwan961205@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"
pydantic = "^2.9.0"
scikit-learn = "^1.5.1"
minio = "^7.2.8"
tensorflow = "^2.17.0"
pydantic-settings = "^2.4.0"
torch = "^2.4.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
